fix: mobile viewport overflow

--- a/artists/artistsindividual.css
+++ b/artists/artistsindividual.css
@@ -5,12 +5,13 @@
   font-family: "Inter", sans-serif;
   font-optical-sizing: auto;
   font-weight:300;
-  max-width: 100vw;
+  max-width: 100%;
   
 }
+#max-width-exception {max-width: 100vw;}
 
 html,body {margin: 0; width: 100%; background-color:#12171d;/*oldcolorwas12161c*/}
-html {height: 100%;}
+html {height: fit-content; width: 100vw;}
 
 body {
   min-height: 100%; /*FIX FOUND - this fixed the repeat img only showing for part of the page, as the body was only reaching the viewport's pixel height when body was set to height: 100%; solution was to keep html as that setting, but set body to min-height 100% instead of definitive height to 100%*/
@@ -320,7 +321,7 @@ section {width: 100%; height:fit-content; z-index: 1;}
 
 .container-container{
   display: flex;
-  width: 96vw;
+  width: 96%;
   height: fit-content;
   margin-top: 1rem;
 }
@@ -421,6 +422,8 @@ section {width: 100%; height:fit-content; z-index: 1;}
       #text-p-long1 {width: 60vw; align-self: start;}
       #text-p-long2 {text-align: left; width: 90vw;}
       .expand-arrow-down {display: none; visibility: hidden;}
+
+      #section-container2 {width: 100%; display: flex; justify-content: center;}
 
  @media screen and (max-width: 1000px){
       #container-container2 {position: relative; justify-content: center;}
